--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,24 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
-  bloc: ^8.1.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
+  flutter_hooks: ^0.20.3
   flutter_localizations:
     sdk: flutter
+  freezed_annotation: ^2.4.1
+  hooks_riverpod: ^2.4.3
   intl: ^0.18.0
+  json_annotation: ^4.8.1
+  riverpod_annotation: ^2.2.0
 
 dev_dependencies:
-  bloc_test: ^9.1.4
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
-  mocktail: ^1.0.0
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
+  riverpod_generator: ^2.3.3
   very_good_analysis: ^5.1.0
 
 flutter:
