--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,16 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  dio: ^5.3.3
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.3
   flutter_localizations:
     sdk: flutter
   freezed_annotation: ^2.4.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   hooks_riverpod: ^2.4.3
   intl: ^0.18.0
   json_annotation: ^4.8.1
