--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,9 @@
 include: package:very_good_analysis/analysis_options.5.1.0.yaml
+analyzer: 
+  exclude: 
+    - /lib/**/*.g.dart
+    - /lib/**/*.freezed.dart
 linter:
   rules:
     public_member_api_docs: false
+    require_trailing_commas: false
